// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticles correctly handles empty lists without errors 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "firstCursor": null,
        "lastCursor": null,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`ListArticles filters by invalid operator 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Field "INVALID" is not defined by type ListArticleReplyCountExpr.],
  ],
}
`;

exports[`ListArticles filters by mixed query 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis and given URL, find articles with the said URL's content 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "hyperlinks": null,
            "id": "listArticleTest2",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis and given text, find articles containing hyperlinks with the said text 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "hyperlinks": Array [
              Object {
                "summary": "居有頃，倚柱彈其劍，歌曰：「長鋏歸來乎！食無魚。」左右以告。孟嘗君曰：「食之，比門下之客。」",
                "topImageUrl": "http://gohome.com/image.jpg",
              },
            ],
            "id": "listArticleTest4",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by null operator 1`] = `
Object {
  "data": Object {
    "ListArticles": null,
  },
  "errors": Array [
    [GraphQLError: Invalid Expression!],
  ],
}
`;

exports[`ListArticles filters by replies time range 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles filters by replies time range 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by replies time range 3`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by replyCount EQ 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QyIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QyIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replyCount GT 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replyCount LT 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by replyRequestCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by time range 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by time range 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles filters by time range 3`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QyIl0=",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles should fail if before and after both exist 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": null,
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
  "errors": Array [
    [GraphQLError: Use of before & after is prohibited.],
  ],
}
`;

exports[`ListArticles sorts 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzQsImxpc3RBcnRpY2xlVGVzdDQiXQ==",
        "lastCursor": "WzEsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles sorts 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzIsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
        "lastCursor": "WzAsImxpc3RBcnRpY2xlVGVzdDMiXQ==",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles sorts 3`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzE1ODE0MzM4NjQ0NzIsImxpc3RBcnRpY2xlVGVzdDQiXQ==",
        "lastCursor": "WzE1ODA5MTU0NjQ0NzIsImxpc3RBcnRpY2xlVGVzdDMiXQ==",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports after 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports before 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles throws error when author filter is not set correctly 1`] = `
Array [
  [GraphQLError: Both appId and userId must be specified at once],
]
`;

exports[`ListArticles throws error when author filter is not set correctly 2`] = `
Array [
  [GraphQLError: fromUserOfArticleId does not match any existing articles],
]
`;
